--- a/pipeline-develop.yml
+++ b/pipeline-develop.yml
@@ -21,10 +21,11 @@ steps:
   workingDirectory: $(solutionDir)
 
 - script: dotnet publish -o $(build.artifactStagingDirectory)
-  displayName: 'Publikowanie -o $(build.artifactStagingDirectory)'
+  displayName: 'Tworzenie i publikowanie -o $(build.artifactStagingDirectory)'
   workingDirectory: $'solutionDir'
 
 - task: PublishPipelineArtifact@1
+  displayName: 'Publikowanie pliku zip'
   inputs:
     targetPath: '@(Pipeline.Workspace)'
     artifact: 'drop'
